[gd_scene load_steps=18 format=3 uid="uid://dydqo66ipj7iv"]

[ext_resource type="Script" path="res://credits.gd" id="1_gph15"]
[ext_resource type="Texture2D" uid="uid://uhm38k0mayyi" path="res://Sprites/newcredbg.png" id="2_dfchh"]
[ext_resource type="FontFile" uid="uid://c8dolumhrfhc2" path="res://Sprites/W95FA.ttf" id="2_o1wv4"]
[ext_resource type="AudioStream" uid="uid://dr0kn6hhbrn3v" path="res://Sound/musicacredito.mp3" id="4_hsl5t"]
[ext_resource type="AudioStream" uid="uid://ddqyyhj4r2bsg" path="res://Sound/menu-buttom-3-bibs-190018.mp3" id="5_hnc47"]
[ext_resource type="AudioStream" uid="uid://cgdrcaqr4ulnf" path="res://Sound/button-202966.mp3" id="6_kbdpv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_px6jm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8h6rc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_otwpd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vvbqs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e8paq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pxqpa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e5uji"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ypjga"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nwqur"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fi348"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ng03f"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gph15")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_dfchh")

[node name="Creators" type="Label" parent="."]
texture_filter = 3
layout_mode = 1
anchors_preset = -1
anchor_right = 0.069
anchor_bottom = 0.018
offset_left = 297.0
offset_top = 41.0
offset_right = 796.512
offset_bottom = 95.336
pivot_offset = Vector2(383, 252)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("2_o1wv4")
theme_override_font_sizes/font_size = 70
text = "A collective effort by:"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 586.0
offset_right = 620.0
offset_bottom = 634.0

[node name="Return_menu" type="Button" parent="VBoxContainer"]
texture_filter = 3
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 0.733333)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0.886275)
theme_override_colors/font_focus_color = Color(1, 1, 1, 0.745098)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_o1wv4")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_px6jm")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_8h6rc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_otwpd")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_vvbqs")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_e8paq")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_pxqpa")
theme_override_styles/hover = SubResource("StyleBoxEmpty_e5uji")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ypjga")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nwqur")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_fi348")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ng03f")
text = "Back"

[node name="PressedC" type="AudioStreamPlayer2D" parent="VBoxContainer/Return_menu"]
stream = ExtResource("5_hnc47")
volume_db = 24.0

[node name="HoverC" type="AudioStreamPlayer2D" parent="VBoxContainer/Return_menu"]
stream = ExtResource("6_kbdpv")

[node name="AssetCred" type="Label" parent="."]
texture_filter = 3
layout_mode = 0
offset_left = 301.0
offset_top = 262.0
offset_right = 1129.0
offset_bottom = 427.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_o1wv4")
theme_override_font_sizes/font_size = 43
text = "Preuss (Concept, game design and assets)
VT (Programmer)
Kiiso (Background artist)"

[node name="credcredre" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_hsl5t")

[connection signal="focus_entered" from="VBoxContainer/Return_menu" to="." method="_on_return_menu_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer/Return_menu" to="." method="_on_return_menu_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Return_menu" to="." method="_on_return_menu_pressed"]
